--- a/components/TheSubNav.module.css
+++ b/components/TheSubNav.module.css
@@ -2,7 +2,7 @@
 
 .container {
   top: 0;
-  z-index: 4;
+  z-index: 5;
 
   font-family: var(--font-display);
   background: var(--text-color);
